--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,8 +1,8 @@
 {%- set audience = audienceOverride or menu.audience -%}
 
-{%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center px-2 xs:pl-2 xs:pr-3 leading-none cursor-pointer font-semibold gap-0.5 xs:gap-1 text-blue-600 rounded min-w-0 pt-1 pb-1.5 xs:py-2 text-fluid-16-18 xs:text-fluid-18-20 pointer-fine:hover:bg-blue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group peer" -%}
+{%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center pl-3 pr-4 leading-none cursor-pointer font-semibold gap-0.5 xs:gap-1 text-blue-600 rounded-full bg-slate-100 min-w-0 py-1 xs:py-2 text-fluid-16-18 xs:text-fluid-18-20 pointer-fine:hover:bg-blue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group peer" -%}
 
-<header class="relative z-50 bg-white">
+<header class="relative z-50 bg-white border-t-8 -scroll-mt-16 border-warning" id="toppen">
   <div class="z-10 grid grid-cols-article">
 
     <div class="grid grid-cols-[auto_1fr] sm:grid-cols-[auto_auto_1fr] col-container">
@@ -10,7 +10,7 @@
       <div class="flex items-center sm:col-span-2">
         {# Logo #}
         <div class="flex items-center py-5 sm:py-6">
-          <a href="/forside/" class="block px-3 py-2.5 -ml-3.5 text-nav-red rounded-sm focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800">
+          <a href="/" class="block px-3 py-2.5 -ml-3.5 text-nav-red rounded-sm focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800">
             {{ '/src/_includes/svg/logo.svg' | svgContents('w-logo h-auto') | safe }}
             <span class="sr-only">NAV</span>
           </a>
@@ -21,9 +21,7 @@
 
         {# Audience #}
         <div class="self-center pl-3 leading-tight text-fluid-20-22">
-          <button class="cursor-default" x-on:click="menuOpen = !menuOpen, myPageOpen = false, loginOpen = false" type="button">
-            {{ activeRole }}
-          </button>
+          {{ activeRole }}
         </div>
       </div>
 
@@ -38,12 +36,27 @@
           x-bind:aria-expanded="menuOpen"
         >
           <template x-if="!menuOpen">
-            {{ '/src/_includes/svg/icons/menusearch.svg' | svgContents('w-7 h-7  shrink-0 pointer-events-none -translate-y-px') | safe }}
+            {{ '/src/_includes/svg/icons/menu.svg' | svgContents('w-6 h-6  shrink-0 pointer-events-none') | safe }}
           </template>
           <template x-if="menuOpen">
-            {{ '/src/_includes/svg/icons/close.svg' | svgContents('w-7 h-7 shrink-0 pointer-events-none') | safe }}
+            {{ '/src/_includes/svg/icons/close.svg' | svgContents('w-6 h-6 shrink-0 pointer-events-none') | safe }}
           </template>
-          <span class="lg:mt-px">Meny og søk</span>
+          <span class="lg:mt-px">Meny</span>
+        </button>
+        <button
+          class="{{ menuButtonClasses }} max-w-min xs:max-w-fit ml-auto order-1" 
+          type="button" 
+          x-on:click="searchOpen = !searchOpen, menuOpen = false, myPageOpen = false, loginOpen = false"
+          x-bind:class="searchOpen && 'bg-blue-50'" 
+          x-bind:aria-expanded="searchOpen"
+        >
+          <template x-if="!searchOpen">
+            {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6  shrink-0 pointer-events-none') | safe }}
+          </template>
+          <template x-if="searchOpen">
+            {{ '/src/_includes/svg/icons/close.svg' | svgContents('w-6 h-6 shrink-0 pointer-events-none') | safe }}
+          </template>
+          <span class="lg:mt-px">Søk</span>
         </button>
       </div>
     </div>
@@ -51,6 +64,8 @@
 
 
   {%- include "partials/navigation.njk" -%}
+
+  {%- include "partials/search.njk" -%}
 
   <div class="grid justify-center py-1 bg-blue-50 min-h-8 grid-cols-page">
     <a 
@@ -72,7 +87,7 @@
       x-bind:aria-expanded="loginOpen"
     >
       {{ '/src/_includes/svg/icons/login.svg' | svgContents('w-7 h-7 shrink-0 pointer-events-none') | safe }}
-      <span>Logg inn (Krever Bank-ID eller …)</span>
+      <span>Logg inn</span>
     </button>
   </div>
 
