--- a/src/pages/forside/forside.njk
+++ b/src/pages/forside/forside.njk
@@ -3,14 +3,15 @@ category: 'For privatpersoner'
 type: 'Forside'
 title: 'Forside'
 description: 'Lenker til de viktigste områdene + utvalgte snarveier.'
-tags: ['proto']
+tags: []
 order: 1
 alpine: true
+permalink: '/'
 ---
 {%- extends 'base.njk' -%}
 
 {%- block content -%}
-  <main class="" x-bind:inert="menuOpen || myPageOpen">
+  <main class="relative z-10" x-bind:inert="menuOpen || myPageOpen">
     <div class="grid pt-10 pb-12 grid-cols-combi ">
       <div class="col-container">
         <h2 class="font-semibold text-fluid-24-28">Hva kan vi hjelpe deg med?</h2>
