--- a/src/pages/kontor/kontor.njk
+++ b/src/pages/kontor/kontor.njk
@@ -26,7 +26,7 @@ alpine: true
 
 
 {%- block content -%}
-  <main data-theme="kontor">
+  <main class="relative z-10" data-theme="kontor">
 
     <div class="grid py-16 grid-cols-combi">
       <div class="mb-8 col-main">
