--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -31,7 +31,7 @@
         <button 
           class="{{ menuButtonClasses }} max-w-min xs:max-w-fit ml-auto order-2" 
           type="button" 
-          x-on:click="menuOpen = !menuOpen, myPageOpen = false, loginOpen = false"
+          x-on:click="menuOpen = !menuOpen, myPageOpen = false, loginOpen = false, searchOpen = false"
           x-bind:class="menuOpen && 'bg-blue-50'" 
           x-bind:aria-expanded="menuOpen"
         >
