Legger prototypemeny bakerst

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer class="grid pb-12 text-white grid-cols-combi bg-deepblue-800" x-bind:inert="menuOpen || myPageOpen">
+<footer class="relative z-10 grid pb-12 text-white grid-cols-combi bg-deepblue-800" x-bind:inert="menuOpen || myPageOpen">
   <div class="col-container">
     <div class="pt-16">
       <div class="sm:columns-2 md:columns-3">
