En artikkel til

--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -3,7 +3,6 @@
 {%- block content -%}
 
   {% set chapters = collections[page.fileSlug] | sort(false, false, 'data.order') %}
-
   <main class="relative grid items-start pt-16 pb-16 bg-white grid-cols-article toc-highlight" data-theme="sykepenger" x-data="{ chapterIndex: 0 }" style="--scopes: {% for chapter in chapters %}--chapter-{{ loop.index }}{{ ',' if not loop.last else ';' }}{% endfor %}">
     <div class="mb-3 col-pictogram" style="--pictogram: var(--color-deepblue-100)">
       {{ '/src/_includes/svg/piktogrammer/produkter/sykepenger.svg' | svgContents('text-deepblue-900 w-16 h-16 sm:w-20 sm:h-20 -translate-x-1') | safe  }}
@@ -12,7 +11,7 @@
       <h1 class="font-bold text-fluid-36-48/tight text-pretty">{{ title | safe }}</h1>
       <div class="mt-4 text-gray-700 text-fluid-12-14 font-regular">
         <span class="px-1.5 py-px border rounded-sm border-slate-300 bg-slate-50">{{ category | safe }}</span>
-        {% if audience %}
+        {% if audience.current %}
           <span aria-hidden="true" class="inline-block">—</span>
           {{ audience.current | safe }}
         {% endif %}
@@ -22,7 +21,7 @@
       <p class="prose text-fluid-18-20 text-pretty">
         {{ ingress | safe }}
 
-        {% if audience %}          
+        {% if audience.others %}          
           <span>{{ audience.others | markdownInline | safe if audience }}</span>      
         {% endif %}
       </p>
@@ -118,3 +117,4 @@
   {% include "partials/kontakt.njk" %}
 
 {%- endblock -%}
+
