--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -37,5 +37,8 @@
     {%- block content -%}{%- endblock -%}
     {%- block bodyscript -%}{%- endblock -%}
     {%- include "partials/footer.njk" -%}    
+
+
+    <!-- Fileslug: {{ page.fileSlug }} -->
   </body>
 </html>
