--- a/src/_includes/partials/search.njk
+++ b/src/_includes/partials/search.njk
@@ -1,10 +1,10 @@
-<div class="absolute z-40 w-full inset-x" x-bind:class="searchOpen ? 'opacity-0 animate-dropdown shadow-xl' : 'hidden'" x-bind:aria-hidden="!searchOpen" x-bind:hidden="!searchOpen" hidden>
+<div class="absolute z-40 w-full right-0 max-w-screen-sm min-h-[70vh] bg-white shadow-xl rounded-b-3xl sm:rounded-br-none" x-bind:class="searchOpen ? 'opacity-0 animate-dropdown' : 'hidden'" x-bind:aria-hidden="!searchOpen" x-bind:hidden="!searchOpen" hidden >
 
-<div class="grid pt-4 pb-12 bg-white grid-cols-combi">
+<div class="px-8 pt-4 pb-12 ">
 
   {# Søk #}
-  <form class="col-container" action="/sok/#toppen">
-    <label class="block font-semibold tracking-widest uppercase text-fluid-14-16 opacity-80" for="search">Søk</label>
+  <form class="" action="/sok/#toppen">
+    <label class="block text-fluid-16-18 opacity-80" for="search">Søk</label>
     <div class="flex mt-2">
       <input class="flex-1 p-2 border border-gray-300 rounded-l focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800" id="search" type="text">
       <button class="flex items-center col-start-2 row-start-1 gap-2 px-6 py-2 text-white bg-blue-500 rounded-r text-fluid-22-24 pointer-fine:hover:bg-blue-600 focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white focus:bg-blue-600" type="submit" x-on:click="searchOpen = false">
