--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -11,7 +11,7 @@ permalink: '/omrade/arbeid/index.html'
     <div class="grid grid-cols-combi">
       <div class="relative flex items-end justify-between col-container">
         <div class="flex-1 pt-8 pb-6">
-          <h1 class="font-semibold text-fluid-36-48/tight text-pretty">
+          <h1 class="font-bold text-fluid-36-48/tight text-pretty">
             {{ title | safe }}
           </h1>
           <h2 class="col-span-2 col-start-1 text-fluid-20-22 text-pretty xs:col-start-1 xs:col-span-1 max-w-prose ">Hva er situasjonen din?</h2>
