--- a/src/pages/tolkning-av-sosialtjenesteloven/tolkning-av-sosialtjenesteloven.njk
+++ b/src/pages/tolkning-av-sosialtjenesteloven/tolkning-av-sosialtjenesteloven.njk
@@ -1,7 +1,7 @@
 ---
 tags: ["produkt", "proto"]
 category: "Sosiale tjenester"
-type: "Produktside"
+type: "Temaartikkel"
 title: "Tolkning av sosialtjenesteloven"
 description: ""
 ingress: "Arbeids- og velferdsdirektoratet har delegert myndighet fra Arbeids- og sosialdepartementet til å forvalte sosialtjenesteloven, herunder ansvaret for å tolke regelverket og veilede i dette."
