--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -587,12 +587,22 @@
     z-index: 20;
     margin-bottom: 8px;
   }
-  :where(.readmore[open]) summary:before {
+  :where(.readmore [open]) summary:before {
     transform: rotate(-180deg);
   }
   :where(.readmore) summary > * {
     text-wrap: pretty;
   }
+  :where(.readmore [open]) .prose {
+    padding-block: --spacing(2);
+    padding-inline-start: --spacing(5);
+    margin-block-start: --spacing(1);
+    margin-inline-start: --spacing(6);
+    translate: -1px;
+    border-inline-start: 2px solid var(--color-slate-400);
+  } 
+
+
   :where(.readmore) summary > span {
     transform: translateY(-1px);
   }
