--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="no" class="h-full font-sans bg-white motion-safe:scroll-smooth scroll-pt-16">
+<html lang="no" class="h-full font-sans bg-white scroll-pt-16">
   <head>
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex" />
@@ -28,7 +28,7 @@
   </head>
   <body
     class="min-h-full text-fluid-18-20 leading-relaxed overflow-x-hidden overflow-y-scroll {{ bodyClass }}" 
-    x-data="{ indexOpen: false, audienceDropdownOpen: false, languageDropdownOpen: false, loggedIn: false, loginOpen: false, menuOpen: false, searchOpen: false, myPageOpen: false, newNotifications: true, overlayOpen: false, floatingToc: false, floatingTocOpen: false, prototypeMenuOpen: false }"
+    x-data="{ indexOpen: false, audienceDropdownOpen: false, languageDropdownOpen: false, menuOpen: false, searchOpen: false, newNotifications: true, overlayOpen: false, floatingToc: false, floatingTocOpen: false }"
   >
 
     {%- include "partials/banner.njk" -%}
