Fjerne ubrukt verdi

--- a/src/pages/forside/forside.njk
+++ b/src/pages/forside/forside.njk
@@ -11,7 +11,7 @@ permalink: '/'
 {%- extends 'base.njk' -%}
 
 {%- block content -%}
-  <main class="relative z-10" x-bind:inert="menuOpen || myPageOpen">
+  <main class="relative z-10" x-bind:inert="menuOpen">
     <div class="grid pt-10 pb-12 grid-cols-combi ">
       <div class="col-container">
         <h2 class="font-semibold text-fluid-24-28">Hva kan vi hjelpe deg med?</h2>
