Vente på innlasting av Alpine

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="/assets/main.min.css" type="text/css" />
     {%- block styles -%}{%- endblock -%}
     {% if alpine %}
-    <script src="/assets/alpine-intersect-plugin.min.js" type="text/javascript" defer></script>
-    <script src="/assets/alpine.min.js" type="text/javascript" defer></script>
+    <script src="/assets/alpine-intersect-plugin.min.js" type="text/javascript"></script>
+    <script src="/assets/alpine.min.js" type="text/javascript"></script>
     {% endif %}
     {%- block fonts -%}{%- endblock -%}
     {%- block script -%}{%- endblock -%}
