--- a/src/pages/sok/sok.njk
+++ b/src/pages/sok/sok.njk
@@ -10,7 +10,7 @@ alpine: true
 {%- extends 'base.njk' -%}
 
 {%- block content -%}
-  <main class="min-h-[61vh] py-8 md:pt-12 md:pb-20 grid grid-cols-article relative z-20">
+  <main class="min-h-[61vh] py-8 md:pt-12 md:pb-20 grid grid-cols-article relative z-60">
     <div class="items-start col-container md:grid md:grid-cols-12 md:gap-x-16" x-data="{ filterOpen: false, searchFilter: 'innhold' }">
 
       {# Tittel og søkefelt #}
@@ -32,8 +32,8 @@ alpine: true
       </div>
 
       {# Sortering og filter #}
-      <div class="relative z-10 mt-8 md:mt-5 md:row-start-2 isolate md:col-start-9 grid-flow-dense md:col-span-4 md:row-span-2">
-          <div class="fixed inset-y-0 right-0 z-30 flex flex-col w-10/12 h-full max-w-md bg-white shadow-lg md:w-full md:bg-transparent md:shadow-none md:static" x-bind:class="filterOpen ? ' animate-openDrawer ' : 'hidden md:block'">
+      <div class="mt-8 md:mt-5 md:row-start-2 md:col-start-9 md:grid-flow-dense md:col-span-4 md:row-span-2">
+          <div class="fixed inset-y-0 right-0 z-50 flex flex-col w-10/12 h-full max-w-md bg-white shadow-lg md:w-full md:bg-transparent md:shadow-none md:static" x-bind:class="filterOpen ? ' animate-openDrawer ' : 'hidden md:block'">
 
           <div class="flex-1 p-5 overflow-y-auto overscroll-contain">
             {# Sortering #}
@@ -64,7 +64,7 @@ alpine: true
                     >
                       <button
                         type="button"
-                        class="flex items-baseline flex-1 gap-2 py-2.5 leading-snug text-left transition-all duration-200 ease-out rounded-md"
+                        class="flex items-baseline flex-1 gap-2 py-2.5 leading-snug text-left transition-all duration-200 cursor-pointer ease-out rounded-md"
                         x-bind:class="searchFilter === '{{ item.title | slugify }}' ? 'cursor-default px-4' : 'pointer-fine:hover:bg-slate-100 pointer-fine:hover:px-4 pointer-fine:hover:-mx-4'"
                         x-on:click="searchFilter = '{{ item.title | slugify }}'"
                       >
@@ -100,7 +100,7 @@ alpine: true
             </div>
           </div>
           <div class="p-5 border-t border-gray-100 bg-gray-50 md:hidden">
-            <button type="button" x-on:click="filterOpen = false" class="w-full px-4 py-2 mt-auto text-white bg-blue-500 rounded" x-bind:aria-expanded="filterOpen">
+            <button type="button" x-on:click="filterOpen = false" class="w-full px-4 py-2 mt-auto text-white bg-blue-500 rounded cursor-pointer hover:bg-blue-600" x-bind:aria-expanded="filterOpen">
               Vis resultat
             </button>
           </div>
