--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -34,17 +34,19 @@
         {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}
         <span>Innhold på siden</span>
       </h2>
-      <ul class="ml-1.5 pr-6 mb-8 text-fluid-16-18/normal opacity-90">
+      <ul class="pr-6 mb-8 text-fluid-16-18/normal opacity-90">
         {% for chapter in chapters %}
         {% set chapterIndex = loop.index %}
-        <li class="not-first:mt-1.5">
-          <a class="inline-block px-3 py-1 ml-2 underline border-transparent hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700 toc-item" href="#{{ chapter.data.title | slugify }}" style="--for: --chapter-{{ loop.index }}">
+        <li class="relative pl-6 not-first:mt-1">
+          <div class="absolute w-2 mt-3.5 rounded-full left-1 aspect-square" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'bg-slate-600'"></div>
+          <a class="inline-block p-1 underline border-transparent hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700 toc-item" href="#{{ chapter.data.title | slugify }}" style="--for: --chapter-{{ loop.index }}">
             {{ chapter.data.title }}
           </a>
           {% if (chapter.templateContent | tocData).length >= 2 %}           
-          <ul class="hidden mb-6 ml-7 lg:block" x-show="chapterIndex == {{ chapterIndex }}">
+          <ul class="hidden my-1.5 ml-1 border-l-2 pl-2.5 mb-6 border-slate-300 lg:block" x-show="chapterIndex == {{ chapterIndex }}">
           {% for item in chapter.templateContent | tocData %}
-            <li class="mt-1"><a class="inline-block py-1.5 px-3 underline hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}">
+            <li class="not-first:mt-1">
+              <a class="inline-block p-1 underline hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}">
                 <span>{{ item.text }}</span>
               </a>
             </li>
@@ -62,7 +64,7 @@
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
-      <section class="pt-8 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect.margin.-480px="chapterIndex = {{ chapterIndex }}" style="--is: --chapter-{{ loop.index }}">
+      <section class="pt-8 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect.margin.0px.0px.-400px.0px="chapterIndex = {{ chapterIndex }}" style="--is: --chapter-{{ loop.index }}">
         <div class="w-10 h-[0.625ch] bg-deepblue-100 mt-12"></div>
         <h2 class="mt-5 mb-4 -translate-x-0.5 font-semibold text-fluid-32-36/tight text-balance">
           <a href="#{{ chapter.data.title | slugify }}">
