--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -30,20 +30,20 @@
 
     {# Innholdsfortegnelse #}
     <div class="lg:row-span-4 lg:sticky lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc" id="toc" x-intersect:leave.margin.-200px.0.0.0="floatingToc = true" x-intersect:enter.margin.100px.0.0.0="floatingToc = false, floatingTocOpen = false">
-      <h2 class="flex items-baseline sticky z-10 bg-white top-0 py-2 font-semibold gap-x-0.5 text-fluid-18-20">
-        {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}
+      <h2 class="flex items-baseline sticky z-10 lg:bg-white top-0 py-2 font-semibold gap-x-0.5 text-fluid-18-20">
+        <a href="#toppen">{{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}</a>
         <span>Innhold på siden</span>
       </h2>
       <ul class="pr-6 mb-8 text-fluid-16-18/normal opacity-90">
         {% for chapter in chapters %}
         {% set chapterIndex = loop.index %}
         <li class="relative pl-6 not-first:mt-1">
-          <div class="absolute w-2 mt-3.5 rounded-full left-1 aspect-square" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'bg-slate-600'"></div>
+          <div class="hidden lg:block absolute w-2 mt-3.5 rounded-full left-1 aspect-square" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'bg-slate-600'"></div>
           <a class="inline-block p-1 underline border-transparent hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700 toc-item" href="#{{ chapter.data.title | slugify }}" style="--for: --chapter-{{ loop.index }}">
             {{ chapter.data.title }}
           </a>
           {% if (chapter.templateContent | tocData).length >= 2 %}           
-          <ul class="hidden my-1.5 ml-1 border-l-2 pl-2.5 mb-6 border-slate-300 lg:block" x-show="chapterIndex == {{ chapterIndex }}">
+          <ul class="hidden my-1.5 ml-1 border-l-2 pl-3 mb-6 border-slate-300 lg:block" x-show="chapterIndex == {{ chapterIndex }}">
           {% for item in chapter.templateContent | tocData %}
             <li class="not-first:mt-1">
               <a class="inline-block p-1 underline hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}">
@@ -64,8 +64,8 @@
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
-      <section class="pt-8 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect.margin.0px.0px.-400px.0px="chapterIndex = {{ chapterIndex }}" style="--is: --chapter-{{ loop.index }}">
-        <div class="w-10 h-[0.625ch] bg-deepblue-100 mt-12"></div>
+      <section class="mb-16 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect:enter.margin.0%.0%.-75%.0%="chapterIndex = {{ chapterIndex }}" style="--is: --chapter-{{ loop.index }}">
+        <div class="w-10 h-[0.625ch] bg-deepblue-100 mt-8"></div>
         <h2 class="mt-5 mb-4 -translate-x-0.5 font-semibold text-fluid-32-36/tight text-balance">
           <a href="#{{ chapter.data.title | slugify }}">
             <span>{{ chapter.data.title }}</span>
@@ -98,15 +98,15 @@
         <ul class="text-fluid-16-18/snug">
           {% for chapter in chapters %}
           {% set chapterIndex = loop.index %}
-          <li class="mt-1">
-            <a class="inline-block py-1 underline pl-7 hover:text-blue-700 hover:decoration-2 decoration-slate-800/40" href="#{{ chapter.data.title | slugify }}" x-on:click="floatingTocOpen = false">
+          <li class="pl-6 mt-1">
+            <a class="inline-block px-1 py-1 underline hover:text-blue-700 hover:decoration-2 decoration-slate-800/40" href="#{{ chapter.data.title | slugify }}" x-on:click="floatingTocOpen = false">
               {{ chapter.data.title }}
             </a>
             {% if (chapter.templateContent | tocData).length >= 2 %}           
-            <ul class="mb-5 mt-0.5 ml-8">
+            <ul class="mt-0.5 ml-1 border-l-2 pl-3 mb-6 border-slate-300">
             {% for item in chapter.templateContent | tocData %}
               <li class="py-0.5">
-                <a class="inline-block py-1 pl-3 underline text-gray-900/80 hover:text-blue-700 decoration-slate-800/40 hover:decoration-2" href="#{{ item.id }}" x-on:click="floatingTocOpen = false">
+                <a class="inline-block px-1 py-1 underline text-gray-900/80 hover:text-blue-700 decoration-slate-800/40 hover:decoration-2" href="#{{ item.id }}" x-on:click="floatingTocOpen = false">
                   <span>{{ item.text }}</span>
                 </a>
               </li>
