--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -1,10 +1,11 @@
 {%- macro button(params) -%}
 
-  {%- set default = "bg-white ring-2 ring-blue-500 text-blue-600 hover:bg-blue-50" -%}
+  {%- set default = "bg-white border-2 border-blue-500 text-blue-600 hover:bg-blue-500 hover:text-white focus-visible:outline-3 focus-visible:outline-blue-600 focus-visible:outline-offset-0" -%}
 
   {%- if params.variant -%}
     {%- if params.variant === "primary" -%}
       {%- set variant = "" -%}
+      
       {# bg-blue-600 hover:bg-blue-600 text-white #}
     {%- endif -%}
 
@@ -13,7 +14,7 @@
     {%- endif -%}
   {%- endif -%}
 
-  <a href="{{ params.href or '#' }}" class="font-medium rounded text-center pt-2 pb-1.5 px-5 no-underline {{ variant or default }} {{ params.class }}">
+  <a href="{{ params.href or '#' }}" class="font-medium rounded-md text-center pt-2 pb-1.5 px-5 no-underline {{ variant or default }} {{ params.class }}">
     <span>{{ params.text | safe }}</span>
   </a>
 {%- endmacro -%}
