--- a/src/pages/pleiepenger/pleiepenger.njk
+++ b/src/pages/pleiepenger/pleiepenger.njk
@@ -20,12 +20,11 @@ permalink: 'produkt/pleiepenger-barn/index.html'
 {%- from "macros/button.njk" import button -%}
 
 {% block quicklinks %}
-  <div class="px-5 pt-4 pb-6 rounded-xl max-md:mb-4 col-main bg-slate-100">
+  <div class="px-6 pt-5 mb-8 pb-7 rounded-xl max-md:mb-4 col-main bg-slate-100">
     <div>
-      <h2 class="inline font-semibold">Snarveier</h2>
-      <p class="inline lowercase"> For deg som kjenner ordningen og vet hva du skal gjøre.</p>
+      <h2 class="inline font-semibold">Snarveier</h2> <p class="inline lowercase">For deg som kjenner ordningen og vet hva du skal gjøre.</p>
     </div>
-    <div class="flex flex-wrap gap-3 mt-6">
+    <div class="flex flex-wrap gap-3 mt-3">
       {{ button({ text: 'Søk om pleiepenger', variant: 'primary' }) }}
       {{ button({ text: 'Ettersend dokumentasjon', variant: 'secondary' }) }}
     </div>
