Endringer på simulering av innlogging

--- a/src/_includes/blank.njk
+++ b/src/_includes/blank.njk
@@ -21,9 +21,7 @@
     <script src="/assets/alpine.min.js" type="text/javascript" defer></script>
     {%- block script -%}{%- endblock -%}
   </head>
-  <body
-    class="text-fluid-18-20 {{ bodyClass }}">
-    {%- include "partials/banner.njk" -%}
+  <body class="text-fluid-18-20 {{ bodyClass }}">
     {%- block content -%}{%- endblock -%}
   </body>
 </html>
