--- a/src/pages/pleiepenger/pleiepenger.njk
+++ b/src/pages/pleiepenger/pleiepenger.njk
@@ -22,7 +22,7 @@ permalink: 'produkt/pleiepenger-barn/index.html'
 {% block quicklinks %}
   <div class="px-6 pt-5 mb-8 pb-7 rounded-xl max-md:mb-4 col-main bg-slate-100">
     <div>
-      <h2 class="inline font-semibold">Snarveier</h2> <p class="inline lowercase">For deg som kjenner ordningen og vet hva du skal gjøre.</p>
+      <h2 class="inline font-semibold">Snarveier</h2> <p class="inline lowercase text-pretty">For deg som kjenner ordningen og vet hva du skal gjøre.</p>
     </div>
     <div class="flex flex-wrap gap-3 mt-3">
       {{ button({ text: 'Søk om pleiepenger', variant: 'primary' }) }}
