--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -2,7 +2,7 @@
 
 {%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center pl-3 pr-4 leading-none cursor-pointer font-semibold gap-0.5 xs:gap-1 text-blue-600 rounded-full bg-slate-100 min-w-0 py-1.5 sm:py-2.5 text-fluid-16-18 xs:text-fluid-18-20 pointer-fine:hover:bg-blue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group peer" -%}
 
-<header class="relative z-50 bg-white border-t-8 -scroll-mt-16 border-warning snap-start" id="toppen">
+<header class="relative z-50 bg-white -scroll-mt-16 snap-start" id="toppen">
   <div class="z-10 grid grid-cols-article">
 
     <div class="grid grid-cols-[auto_1fr] sm:grid-cols-[auto_auto_1fr] col-container">
@@ -68,14 +68,14 @@
   {%- include "partials/search.njk" -%}
 
   <div class="grid justify-center py-1 {{ 'bg-deepblue-50 has-[a:hover]:bg-gray-100' if page.fileSlug !== 'min-side' else 'bg-deepblue-800 text-white' }} min-h-8 grid-cols-page has-[button:hover]:bg-slate-200">
-    {% if page.fileSlug === 'min-side' %}
+    {% if loggedIn %}
       <a class="inline-flex items-center gap-1 px-3 py-1 text-white" href="/min-side">
         {{ '/src/_includes/svg/icons/person-circle.svg' | svgContents('w-7 h-7 -ml-0.5 shrink-0 pointer-events-none') | safe }}
         <span class="mt-px sm:hidden">Min side</span>
         <span class="hidden mt-px sm:inline-block">Isac Norland</span>
       </a>
     {% else %}
-      <a class="inline-flex items-center gap-2 px-3 py-1 text-blue-600 cursor-pointer hover:underline decoration-blue-400 underline-offset-3" href="/min-side#toppen">
+      <a class="inline-flex items-center gap-2 px-3 py-1 text-blue-600 cursor-pointer hover:underline decoration-blue-400 underline-offset-3" href="/logg-inn">
         {{ '/src/_includes/svg/icons/login.svg' | svgContents('w-7 h-7 shrink-0 pointer-events-none') | safe }}
         <span>Logg inn</span>
       </a>
